user-accounts: Fix button sensitivity in photo dialogue

g_file_info_get_content_type() returns an internal string, and we were
freeing the file_info we got it from in the next line, so it's a miracle
that the mime_type was ever not garbage.

https://bugzilla.gnome.org/show_bug.cgi?id=778424